# Autonomous-Quantitative-Investment-Research-Equity-Synthesis-Engine

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: app.py
src/agents/: agents.py  crew.py
src/agents/tools/: financial.py  scraper.py
src/api/: main.py
src/shared/: config.py  storage.py
